// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate a route with the parent. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/users/([\\\\w-]{20})/projects",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
  "name": "web",
  "onEnter": [Function],
  "parents": Array [],
  "resolve": Object {
    "id": [Function],
  },
  "uri": "/users/{userId:[\\\\w-]{20}}/projects?index?sort",
  "uriParamKeys": Array [
    "userId",
    "?index",
    "?sort",
  ],
  "uriTemplate": "/users/{userId}/projects",
}
`;

exports[`Generate a route with the parent. 2`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/users/([\\\\w-]{20})/projects/users/([\\\\w-]{20})/projects/([\\\\w-]{20})",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\$/,
  "name": "web.project",
  "onEnter": [Function],
  "parents": Array [
    Route {
      "component": [Function],
      "dismissalDelay": undefined,
      "generateLocation": [Function],
      "generateUri": [Function],
      "isAbstract": false,
      "loadComponent": undefined,
      "matchPattern": "/users/([\\\\w-]{20})/projects",
      "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
      "name": "web",
      "onEnter": [Function],
      "parents": Array [],
      "resolve": Object {
        "id": [Function],
      },
      "uri": "/users/{userId:[\\\\w-]{20}}/projects?index?sort",
      "uriParamKeys": Array [
        "userId",
        "?index",
        "?sort",
      ],
      "uriTemplate": "/users/{userId}/projects",
    },
  ],
  "resolve": Object {
    "id": [Function],
  },
  "uri": "/users/{userId:[\\\\w-]{20}}/projects/{projectId:[\\\\w-]{20}}",
  "uriParamKeys": Array [
    "userId",
    "?index",
    "?sort",
    "userId",
    "projectId",
  ],
  "uriTemplate": "/users/{userId}/projects/users/{userId}/projects/{projectId}",
}
`;

exports[`Generate the URI of the route with params 1`] = `"/users/AWgrmJp1SjjuUM2bzZXM/projects?array=a&array=b&empty=&index=0&nullValue&sort=asc"`;

exports[`Initial Route with a parent. 1`] = `
Route {
  "component": undefined,
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/dashboard",
  "matchReg": /\\^\\\\/dashboard\\$/,
  "name": "web.dashboard",
  "onEnter": undefined,
  "parents": Array [
    Route {
      "component": undefined,
      "dismissalDelay": undefined,
      "generateLocation": [Function],
      "generateUri": [Function],
      "isAbstract": false,
      "loadComponent": undefined,
      "matchPattern": "/",
      "matchReg": /\\^\\\\/\\$/,
      "name": "web",
      "onEnter": undefined,
      "parents": Array [],
      "resolve": Object {},
      "uri": "/",
      "uriParamKeys": Array [],
      "uriTemplate": "/",
    },
  ],
  "resolve": Object {},
  "uri": "dashboard",
  "uriParamKeys": Array [],
  "uriTemplate": "/dashboard",
}
`;

exports[`Initial Route without a parent. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/users/([\\\\w-]{20})/projects",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": Array [],
  "resolve": Object {
    "projects": [Function],
    "user": [Function],
  },
  "uri": "/users/{userId:[\\\\w-]{20}}/projects?index",
  "uriParamKeys": Array [
    "userId",
    "?index",
  ],
  "uriTemplate": "/users/{userId}/projects",
}
`;
